--- a/Katan.html
+++ b/Katan.html
@@ -7,6 +7,7 @@
 			<canvas id="WoodCanvas" width="200" height="250"></canvas> 
 			<canvas id="StoneCanvas" width="200" height="250"></canvas> 
 			<canvas id="WheatCanvas" width="200" height="250"></canvas> 
+			<script src='js/main.js'></script> 
 		</div> 
 	</body>
 </html> 
