--- a/Katan.html
+++ b/Katan.html
@@ -2,11 +2,11 @@
 <html>
 	<body>
 		<div> 
-			<canvas id="SheepCanvas" width="200" height="250"></canvas> 
-			<canvas id="BrickCanvas" width="200" height="250"></canvas> 
-			<canvas id="WoodCanvas" width="200" height="250"></canvas> 
-			<canvas id="StoneCanvas" width="200" height="250"></canvas> 
-			<canvas id="WheatCanvas" width="200" height="250"></canvas> 
+			<canvas id="CpuCanvas" width="200" height="250"></canvas> 
+			<canvas id="CablesCanvas" width="200" height="250"></canvas> 
+			<canvas id="SysadminCanvas" width="200" height="250"></canvas> 
+			<canvas id="CoffeeCanvas" width="200" height="250"></canvas> 
+			<canvas id="RacksCanvas" width="200" height="250"></canvas> 
 			<script src='js/main.js'></script> 
 		</div> 
 	</body>
