--- a/Katan.html
+++ b/Katan.html
@@ -2,11 +2,11 @@
 <html>
 	<body>
 		<div> 
-			<canvas id="CpuCanvas" width="200" height="250"></canvas> 
-			<canvas id="CablesCanvas" width="200" height="250"></canvas> 
-			<canvas id="SysadminCanvas" width="200" height="250"></canvas> 
-			<canvas id="CoffeeCanvas" width="200" height="250"></canvas> 
-			<canvas id="RacksCanvas" width="200" height="250"></canvas> 
+			<canvas id="cpuCanvas" width="200" height="250"></canvas> 
+			<canvas id="cablesCanvas" width="200" height="250"></canvas> 
+			<canvas id="sysadminCanvas" width="200" height="250"></canvas> 
+			<canvas id="coffeeCanvas" width="200" height="250"></canvas> 
+			<canvas id="racksCanvas" width="200" height="250"></canvas> 
 			<script src='js/main.js'></script> 
 		</div> 
 	</body>
