--- a/Katan.html
+++ b/Katan.html
@@ -3,7 +3,7 @@
 	<body>
 		<div> 
 			<canvas id="cpuCanvas" width="200" height="250"></canvas> 
-			<canvas id="cablesCanvas" width="200" height="250"></canvas> 
+			<canvas id="cableCanvas" width="200" height="250"></canvas> 
 			<canvas id="sysadminCanvas" width="200" height="250"></canvas> 
 			<canvas id="coffeeCanvas" width="200" height="250"></canvas> 
 			<canvas id="racksCanvas" width="200" height="250"></canvas> 
