Updated Resource render function and image sources.

--- a/Katan.html
+++ b/Katan.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html> 
 <html>
 	<body>
+		<div>
+			<canvas id="board" width="1700" height="1200"></canvas> 
+		</div> 
 		<div> 
-			<canvas id="cpuCanvas" width="200" height="250"></canvas> 
-			<canvas id="cableCanvas" width="200" height="250"></canvas> 
-			<canvas id="sysadminCanvas" width="200" height="250"></canvas> 
-			<canvas id="coffeeCanvas" width="200" height="250"></canvas> 
-			<canvas id="racksCanvas" width="200" height="250"></canvas> 
+			<canvas id="cpuCanvas" width="300" height="300"></canvas> 
+			<canvas id="cableCanvas" width="300" height="300"></canvas> 
+			<canvas id="sysadminCanvas" width="300" height="300"></canvas> 
+			<canvas id="coffeeCanvas" width="300" height="300"></canvas> 
+			<canvas id="rackCanvas" width="300" height="300"></canvas> 
 			<script src='js/main.js'></script> 
 		</div> 
 	</body>
